Improves the zoom a lot, it's faster, it's less buggy, there is a range slider and a reset button, and the code is way more readable.

--- a/app/escriptorium/static/css/escriptorium.css
+++ b/app/escriptorium/static/css/escriptorium.css
@@ -1,5 +1,6 @@
 body {
     mind-height: 2000px;
+    padding: 10px;
     padding-top: 70px;
     max-width: 1800px;
 }
@@ -249,7 +250,6 @@ i.panel-icon {
     vertical-align: top;
 }
 
-
 .img-container {
     position: relative;
     overflow: hidden;
@@ -259,8 +259,10 @@ i.panel-icon {
     transform-origin: 0 0;
 }
 .zoom-container {
-    transition: transform 0.3s;
     transform-origin: 0 0;
+}
+#zoom-range {
+    height: 100px;
 }
 
 #part-trans, #part-img {
